@startuml device interface
title Class Diagram --vc::device

skinparam backgroundColor #FAFAFA
skinparam classBackgroundColor #EBF3FB
skinparam classBorderColor #2E75B6
skinparam classHeaderBackgroundColor #3e6d99
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #1F1F1F
skinparam arrowColor #1F4E79
skinparam packageBackgroundColor #F5F5F5
skinparam packageBorderColor #AAAAAA
skinparam shadowing false

package "vc::device" {

    enum ConnectStatus {
        NoConnection
        Disconnected
        Connected
        LostConnected
        ConnectFailed
    }

    enum DeviceType {
        UserType
        Camera
        McProtocolDevice
        RobotTcpDevice
    }

    class Device_Json_Object << Json >> {
        + id : QString
        + name : QString
        + type : DeviceType
        + config : QJsonObject 
        .. note ..
        * config format depend on device type
    }

    class DeviceFactory {
        .. Allocate new device from Json object, depend on DeviceType ..
        + {static} fromJson(&QJsonObject) : IDevice pointer
    }

    class IDevice << QObject, abstract >> {
        .. Device connection method ..
        + {abstract} deviceConnect() : bool
        + {abstract} deviceDisconnect() : void
        + {abstract} isDeviceConnected() : bool
        .. Device configuration by Project ..
        + {abstract} deviceType() : DeviceType 
        + lastMsg() : QString
        + id() : QString
        + name() : QString
        + setName(QString) : void
        + connectionStatus() : ConnectStatus
        .. Device configuration setter and getter ..
        + setDeviceConfig() : bool
        + deviceConfig() : IDeviceCfg pointer
        .. Device manager ..
        + setDeviceManager(DeviceManager) : void
        + deviceManager() : DeviceManager 
        .. Device initialize ..
        + deviceInitialize() : bool
        + deviceTerminate() : bool
        .. Available IO setting (Not use for camera device) ..
        + {abstract} getAvailableBits() : QStringList
        + {abstract} getAvailabelWords() : QStringList
        .. Device save and load method ..
        + toJson() : QJsonObject
        + fromJson(&QJsonObject) : bool
        .. Signals ..
        + nameChanged() : void
        + configChanged() : void
        + connectStatusChanged(ConnectStatus) : void
        + connectionFailed(QString msg) : void
        + errorOccurred(QString) : void 

        .. Notes ..
        * nameChanged auto emit when call setName()
        * configChanged auto emit when call setDeviceConfig()
        * connectStatusChanged auto emit when call setConnectStatus()
        * connectionFailed auto emit when call setConnectStatus() if status input is ConnectFailed 
        * don't need to override fromJson and toJson, all parameters will be parsed bydevice config instance
        * call mutex locker before call fromJson or toJson for thread safe
        * must override setDeviceConfig(IDeviceCfg *cfg) for each child class
    }

    note right of IDevice
        DeviceId created via:
            IDevice constructor
            Device ID in system provided by DeviceManager 
            or Device Fatory when open project
    end note

    class IDeviceCfg {
        .. Signals contain all device setting parameters ..
        + {abstract} deviceType() : DeviceType
        + {abstract} toJson() : QJsonObject
        + {abstract} fromJson(&QJsonObject) : bool
        + {abstract} clone() : IDeviceCfg pointer
    }

}

' Inheritance

' Enum usage
IDevice             --> ConnectStatus           : status
IDevice             --> DeviceType              : device type

' Dependencies
DeviceFactory       ..> IDevice                 : returns
IDevice             ..> IDeviceCfg           : returns
IDevice             ..> Device_Json_Object      : returns json format

@enduml
